--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/vegetableapp
-spring.datasource.username=pushpendra
-spring.datasource.password=abc123
+spring.datasource.url=jdbc:mysql://root:KrAgNAvcANP9DMC2OXVX@containers-us-west-138.railway.app:5580/railway
+spring.datasource.username=root
+spring.datasource.password=KrAgNAvcANP9DMC2OXVX
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
