--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=6623
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://root:KrAgNAvcANP9DMC2OXVX@containers-us-west-138.railway.app:5580/railway
 spring.datasource.username=root
